force-app/main/default/objects/Portal_button__mdt/Portal_button__mdt.object-meta.xml
<CustomObject>
    <description>Combines a button with an account and optionally an object so we can determine per account and object type whether a button is visible.</description>
    <label>Portal button</label>
    <pluralLabel>Portal buttons</pluralLabel>
</CustomObject>