force-app/main/default/objects/Portal_button__mdt/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>