force-app/main/default/objects/Portal_button__mdt/fields/Button_configuration__c.field-meta.xml
<CustomField>
    <fullName>Button_configuration__c</fullName>
    <label>Button configuration</label>
    <referenceTo>Portal_button_configuration__mdt</referenceTo>
    <relationshipLabel>Portal buttons</relationshipLabel>
    <relationshipName>Portal_buttons</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>