force-app/main/default/objects/Portal_button__mdt/fields/Object_api_name__c.field-meta.xml
<CustomField>
    <fullName>Object_api_name__c</fullName>
    <label>Object api name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>